# heart-disease-prediction

./: .gitignore  README.md  index.html  pyproject.toml
notebooks/: heart_disease_classification.py
