[project]
name = "heart-disease-prediction"
version = "0.1.0"
description = "Heart Disease Prediction project"
authors = [
    {name = "daviti",email = "davit.ugl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "jupyterlab (>=4.5.3,<5.0.0)",
    "marimo (>=0.19.6,<0.20.0)"
]
